--- a/data_example.ipynb
+++ b/data_example.ipynb
@@ -97,6 +97,21 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from data import SATDataset\n",
+    "ds = SATDataset('dataset', 'RND3SAT/uf50-218')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
