added debug section for model.py

--- a/src/debug.ipynb
+++ b/src/debug.ipynb
@@ -163,6 +163,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Debug for loss.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -253,16 +260,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Debug for models.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## sample a test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = train_ds[1]\n",
+    "edge_index_pos = test_data.edge_index_pos\n",
+    "edge_index_neg = test_data.edge_index_neg\n",
+    "xv = # TODO\n",
+    "xc = # TODO\n",
+    "variable_count = max(max(edge_index_pos[1]), max(edge_index_neg[1]))+1\n",
+    "clause_count = len(edge_index_pos[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize a model and to make it run through"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer_encoder = #TODO: Import layers and fill in here\n",
+    "num_layers_en = #TODO\n",
+    "layer_decoder = #TODO: Import layers and fill in here\n",
+    "num_layers_de = #TODO\n",
+    "encoder = models.Encoder(layer_encoder, num_layers_en) \n",
+    "decoder = models.Decoder(layer_decoder, num_layers_de) \n",
+    "model = models.GraphTransformer(encoder, decoder)\n",
+    "literal_assignment = model(xv, xc, edge_index_pos, edge_index_neg)\n",
+    "loss_func = loss_func = SimpleLossCompute(par_sm, par_sg, \"cuda\")\n",
+    "loss_of_this_assignent = loss_func(x_s, edge_index_pos, edge_index_neg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# After finish model.py, debug train.py"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python_defaultSpec_1600577004742",
+   "name": "python_defaultSpec_1600578671205",
    "language": "python",
    "display_name": "Python 3.7.6 64-bit ('base': conda)"
   },
