--- a/data_example.ipynb
+++ b/data_example.ipynb
@@ -104,11 +104,50 @@
    "outputs": [],
    "source": [
     "from data import SATDataset\n",
-    "ds = SATDataset('dataset', 'RND3SAT/uf50-218')\n",
+    "ds = SATDataset('dataset', 'RND3SAT/uf50-218', False)\n",
     "last_trn, last_val = int(len(ds)), int(len(ds))\n",
     "train_ds = ds[: last_trn]\n",
     "valid_ds = ds[last_trn: last_val]\n",
     "test_ds = ds[last_val:]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "from torch_sparse import transpose"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0, 1, 1, 2],\n",
+      "        [0, 0, 1, 1]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = torch.ones(edge_index_pos.size(1))\n",
+    "index, _ = transpose(edge_index_pos, val, 2, 3)\n",
+    "print(index)"
    ],
    "metadata": {
     "collapsed": false,
