--- a/src/debug.ipynb
+++ b/src/debug.ipynb
@@ -9,16 +9,22 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "\nBad key \"text.kerning_factor\" on line 4 in\n/Users/yangzhiping/opt/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\nYou probably need to get an updated matplotlibrc file from\nhttps://github.com/matplotlib/matplotlib/blob/v3.1.3/matplotlibrc.template\nor from the matplotlib source distribution\n"
+     "output_type": "error",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'SimpleLossCompute' from 'loss' (/home/cchenli/Documents/transformers.satisfy/src/loss.py)",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0b8ecb7961a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch_geometric\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mData\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcnf\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBipartiteData\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSimpleLossCompute\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSimpleLossCompute2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpush_to_side\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SimpleLossCompute' from 'loss' (/home/cchenli/Documents/transformers.satisfy/src/loss.py)"
+     ]
     }
    ],
    "source": [
     "import torch\n",
     "from torch_geometric.data import Data, DataLoader\n",
     "from cnf import BipartiteData\n",
-    "from loss import SimpleLossCompute, SimpleLossCompute2, push_to_side\n",
+    "from loss import LossCompute, push_to_side\n",
     "import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -26,14 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Satisfied Cases ...\nDownloading https://www.cs.ubc.ca/~hoos/SATLIB/Benchmarks/SAT/RND3SAT/uf50-218.tar.gz\nExtracting ../dataset/raw/uf50-218.tar.gz\nprocessing uf50-0721.cnf:   3%|▎         | 34/1000 [00:00<00:02, 332.59it/s]Processing...\nprocessing uf50-0922.cnf: 100%|██████████| 1000/1000 [00:02<00:00, 342.52it/s]\nDone!\n"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# add a folder raw under dataset manually before execute this chunk\n",
     "from data import SATDataset\n",
@@ -304,9 +304,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python_defaultSpec_1600719343518",
+   "name": "python38364bitbaseconda16d50af7b8b1404a8c193832594d3dff",
    "language": "python",
-   "display_name": "Python 3.7.6 64-bit ('base': conda)"
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -318,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "3.7.6-final"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
