add more layers in encoder

--- a/src/debug.ipynb
+++ b/src/debug.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,10 +152,10 @@
     "        self.load_model = False\n",
     "        self.batch_size = 1\n",
     "        self.num_layers = 2\n",
-    "        self.num_encoder_layers = 3\n",
+    "        self.num_encoder_layers = 4\n",
     "        self.num_decoder_layers = 2\n",
     "        self.num_meta_paths = 4\n",
-    "        self.encoder_channels = '1,16,32,32'\n",
+    "        self.encoder_channels = '1,16,32,32,32'\n",
     "        self.decoder_channels = '32,16,16'\n",
     "        self.self_att_heads = 8\n",
     "        self.cross_att_heads = 8\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -216,7 +216,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "tensor(0., grad_fn=<SelectBackward>)\ntensor(0.8960, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8811, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8602, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9276, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8726, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8778, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8723, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8474, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8606, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8573, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8873, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9106, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8936, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9086, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9169, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9152, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8919, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8574, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9053, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8955, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9123, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9144, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8880, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9019, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8784, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9119, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8515, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9062, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9292, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8521, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9342, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8779, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9326, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9205, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9388, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8518, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8829, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8851, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8831, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8726, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9230, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9174, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9155, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9073, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9429, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9073, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8403, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8220, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8994, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8751, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8654, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9074, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.7842, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8734, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9165, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8367, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9200, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8789, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8640, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9160, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.7908, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9013, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8660, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8414, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8845, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8592, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8850, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9071, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8546, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9486, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8962, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8986, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8993, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9282, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8832, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9048, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8966, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8786, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8894, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8902, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8514, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8401, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8779, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9176, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9174, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8954, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8884, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8869, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9211, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8927, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8739, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8688, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.9174, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8867, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8829, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8711, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8963, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8841, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8808, grad_fn=<DivBackward0>)\ntensor(0., grad_fn=<SelectBackward>)\ntensor(0.8979, grad_fn=<DivBackward0>)\n"
+     "text": "new accuracy:  None\n0.0\ntensor(0.9260, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9555, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9545, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9608, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9465, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9622, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9674, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9365, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9337, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9608, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9474, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9385, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9751, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9760, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9791, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9460, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9575, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9365, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9454, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9339, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9431, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9738, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9401, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9432, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9589, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9449, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9471, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9310, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9551, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9502, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9579, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9556, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9373, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9347, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9271, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9654, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9512, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9649, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9580, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9437, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9431, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9120, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9743, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9619, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9576, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9604, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9622, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9448, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9697, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9545, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9672, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9496, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9476, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9500, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9579, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9254, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9357, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9355, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9398, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9327, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9559, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9532, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9467, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9346, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9516, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9441, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9466, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9573, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9412, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9631, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9470, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9325, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9722, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9580, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9761, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9452, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9563, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9572, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9736, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9492, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9479, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9628, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9567, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9227, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9486, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9419, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9313, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9351, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9546, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9522, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9422, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9352, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9318, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9698, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9683, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9549, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9357, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9628, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9500, grad_fn=<DivBackward0>)\nnew accuracy:  None\n0.0\ntensor(0.9669, grad_fn=<DivBackward0>)\n"
     }
    ],
    "source": [
@@ -231,22 +231,44 @@
     "    num_cls = num_clauses[i * 1 : (i + 1) * 1]\n",
     "    gr_idx_cls = torch.cat([torch.tensor([i] * num_cls[i]) for i in range(num_cls.size(0))])\n",
     "    loss, sm = loss_func(xv, batch.edge_index_pos, batch.edge_index_neg, clause_count=218, gr_idx_cls=gr_idx_cls, is_train=False)\n",
-    "    acc = accuracy(xv, batch.edge_index_pos, batch.edge_index_neg)\n",
+    "    acc = accuracy(xv, batch.edge_index_pos, batch.edge_index_neg).item()\n",
+    "    print(\"new accuracy: \", flip_search(xv, sm, batch.edge_index_pos, batch.edge_index_neg, acc))\n",
     "    print(acc)\n",
     "    print(torch.sum(sm) / 218)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "tensor([0.2695, 0.7240, 0.8077, 0.8801])\naccuracy:  tensor(1.)\ntensor([0.7167, 0.7261, 0.8555])\nnew accuracy:  None\ntensor([0.2695, 0.7240, 0.8077, 0.8801])\n"
+    }
+   ],
    "source": [
+    "from loss import flip_search\n",
     "x = torch.rand(4)\n",
+    "edge_index_pos = torch.tensor([\n",
+    "    [0, 0, 1, 2, 2],\n",
+    "    [0, 1, 1, 2, 3],\n",
+    "])\n",
+    "edge_index_neg = torch.tensor([\n",
+    "    [0, 1, 1, 2],\n",
+    "    [2, 0, 2, 1],\n",
+    "])\n",
+    "accuracy_compute = AccuracyCompute()\n",
+    "accuracy = accuracy_compute(x, edge_index_pos, edge_index_neg)\n",
+    "sm = LossCompute.get_sm(x, edge_index_pos, edge_index_neg, 10, 10)\n",
     "print(x)\n",
-    "print(x.square().sum())"
+    "print(\"accuracy: \", accuracy)\n",
+    "print(sm)\n",
+    "print(\"new accuracy: \", flip_search(x, sm, edge_index_pos, edge_index_neg, accuracy))\n",
+    "print(x)"
    ]
   },
   {
