--- a/data_example.ipynb
+++ b/data_example.ipynb
@@ -174,8 +174,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python386jvsc74a57bd09e714bb585ba67aa795220581f630ad5b653790dc2b0796d4758186c360fa788",
-   "display_name": "Python 3.8.6 64-bit"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,12 +187,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "3.8.6-final"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
     "hash": "9e714bb585ba67aa795220581f630ad5b653790dc2b0796d4758186c360fa788"
    }
+  },
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   }
  },
  "nbformat": 4,
